[project]
name = "nonebot-plugin-echo"
version = "0.1.0"
description = "NoneBot2 插件，让 Bot 学习群友的发言和表情包。/ NoneBot2 plugin to learn what your group members say."
authors = [
    { name = "KomoriDev", email = "mute231010@gmail.com" },
    { name = "CMHopeSunshine", email = "277073121@qq.com" },
]
license = { text = "AGPL-3" }
readme = "README.md"
keywords = []

requires-python = ">=3.9"
dependencies = []

[project.urls]
homepage = "https://github.com/KomoriDev/nonebot-plugin-echo"
repository = "https://github.com/KomoriDev/nonebot-plugin-echo"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
]

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]

[tool.ruff.lint.isort]
length-sort = true
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "standard"
